# auth-ingress

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: RELEASE_SETUP.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: release-recovery.md  releasing.md  user-management.md
memory/: 2026-06-22-service-group-prefill.md  2026-06-25-form-button-spacing.md  2026-06-25-laptop-density-scale.md  2026-06-25-mobile-nav-compression.md
scripts/: __init__.py
scripts/release/: __init__.py  build_and_check.py  check_artifacts.py  package_metadata.py  validate_release.py  verify_index.py  verify_staged_release.py
specs/001-auth-entry-portal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-auth-entry-portal/checklists/: requirements.md
specs/001-auth-entry-portal/contracts/: openapi.yaml  ui-flows.md
specs/002-full-web-app-proxy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-publish-pypi/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-publish-pypi/checklists/: requirements.md
specs/004-manage-user-access/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-rename-auth-ingress/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-branch-publish-flow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-preserve-form-input/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-group-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-tech-style-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/auth_entry_portal/: cli.py  config.py  main.py
src/auth_ingress/: cli.py  config.py  main.py
src/auth_portal/: __init__.py  cli.py  config.py  main.py
tests/: cli_helpers.py  conftest.py  release_helpers.py  rename_helpers.py  ui_style_helpers.py  user_management_helpers.py
tests/contract/: test_access_denial_contract.py  test_admin_contract.py  test_admin_groups_contract.py  test_admin_users_contract.py  test_bootstrap_contract.py  test_branch_publish_policy.py  test_first_install_ui.py  test_github_workflows.py  test_package_contract.py  test_proxy_host_contract.py  test_proxy_http_contract.py  test_proxy_websocket_contract.py  test_release_operations_contract.py  test_rename_cli_contract.py  test_rename_docs_contract.py  test_rename_inventory_contract.py  test_rename_migration_contract.py  test_rename_ui_contract.py  test_ui_style_contract.py  test_user_cli_contract.py  test_user_entry_contract.py  test_user_lifecycle_contract.py  test_user_management_schema.py
tests/e2e/: test_access_denials.py  test_admin_groups.py  test_admin_services.py  test_admin_users.py  test_first_install.py  test_full_web_app_proxy.py  test_rename_identity.py  test_tech_style_ui.py  test_user_entry.py  test_user_lifecycle.py
tests/fixtures/: downstream_app.py  recovery_delivery.py  rename_inventory.py
tests/integration/: test_access_denials.py  test_admin_groups.py  test_admin_services.py  test_cli_rename_compatibility.py  test_config_rename_compatibility.py  test_distribution_artifacts.py  test_first_install_bootstrap.py  test_performance_goals.py  test_proxy_assets.py  test_proxy_interactions.py  test_proxy_performance.py  test_proxy_websocket.py  test_temporary_password_flow.py  test_ui_style_routes.py  test_user_cli.py  test_user_delete.py  test_user_entry.py  test_user_lifecycle.py  test_user_management_migration.py  test_user_memberships.py  test_user_search_performance.py
tests/security/: test_access_abuse.py  test_admin_boundary.py  test_bootstrap_security.py  test_cli_rename_security.py  test_group_management_security.py  test_management_form_outcomes.py  test_management_form_state.py  test_password_reset_security.py  test_proxy_authorization.py  test_proxy_redaction.py  test_proxy_state_isolation.py  test_proxy_websocket_security.py  test_release_redaction.py  test_release_workflow_security.py  test_rename_evidence.py  test_rename_history_security.py  test_session_boundary.py  test_ui_style_security.py  test_user_cli_security.py  test_user_lifecycle_security.py  test_user_management_audit.py  test_user_management_authorization.py  test_user_management_evidence.py
tests/smoke/: __init__.py  test_installed_package.py
tests/unit/: test_cli_demo_credentials.py  test_config_rename.py  test_effective_user_access.py  test_group_admin_service.py  test_index_verification.py  test_management_form_state.py  test_password_reset_service.py  test_proxy_security_helpers.py  test_release_validation.py  test_security_helpers.py
(+180 files in other folders)
