[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auth-entry-portal"
version = "0.1.0"
description = "A small authenticated entry portal for internal services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "argon2-cffi>=23.1",
  "fastapi>=0.115",
  "httpx>=0.27",
  "itsdangerous>=2.2",
  "jinja2>=3.1",
  "python-multipart>=0.0.18",
  "sqlalchemy>=2.0",
  "uvicorn>=0.34",
  "websockets>=15.0",
]

[project.optional-dependencies]
test = [
  "playwright>=1.55",
  "pytest>=8.3",
  "pytest-cov>=6.0",
]

[project.scripts]
auth-portal = "auth_entry_portal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/auth_entry_portal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
