[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "auth-ingress"
version = "0.3.0rc1"
description = "A small authenticated ingress portal for internal services"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "zondatw" }]
maintainers = [{ name = "zondatw" }]
keywords = ["authentication", "authorization", "ingress", "portal", "reverse-proxy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Security",
]
import-names = ["auth_ingress"]
dependencies = [
  "argon2-cffi>=23.1",
  "fastapi>=0.115",
  "httpx>=0.27",
  "itsdangerous>=2.2",
  "jinja2>=3.1",
  "python-multipart>=0.0.18",
  "sqlalchemy>=2.0",
  "uvicorn>=0.34",
  "websockets>=15.0",
]

[project.optional-dependencies]
test = [
  "packaging>=24.2",
  "playwright>=1.55",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "pyyaml>=6.0",
]

[project.scripts]
auth-ingress = "auth_ingress.cli:main"
auth-portal = "auth_ingress.cli:main"

[project.urls]
Homepage = "https://github.com/zondatw/auth-ingress"
Documentation = "https://github.com/zondatw/auth-ingress#readme"
Source = "https://github.com/zondatw/auth-ingress"
Issues = "https://github.com/zondatw/auth-ingress/issues"
Changelog = "https://github.com/zondatw/auth-ingress/blob/main/CHANGELOG.md"
Security = "https://github.com/zondatw/auth-ingress/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["src/auth_ingress"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/SECURITY.md",
  "/pyproject.toml",
  "/uv.lock",
]
exclude = [".gitignore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
